backend/k8s/backen-csp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groceries-backend
  labels:
    app: groceries-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: groceries-backend
  template:
    metadata:
      labels:
        app: groceries-backend
    spec:
      containers:
        - name: groceries-backend
          image: us-central1-docker.pkg.dev/georgef-sandbox/groceries
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:latest
          args:
            - /cloud_sql_proxy
            - -instances=georgef-sandbox:us-central1:sql-instance=tcp:3306
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
