backend/k8s/backend-csp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groceries-backend
  namespace: dev
  labels:
    app: groceries-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: groceries-backend
  template:
    metadata:
      labels:
        app: groceries-backend
    spec:
      serviceAccountName: sql-ksa
      containers:
        - name: groceries-backend
          imagePullPolicy: Always
          image: us-central1-docker.pkg.dev/georgef-sandbox/groceries/groceries-backend-cloud-sql-proxy:latest
          ports:
            - containerPort: 5000
