backend/k8s/groceries-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: groceries-backend
  namespace: dev
  labels:
    app: groceries-backend
spec:
  type: ClusterIP
  selector:
    app: groceries-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3307
