backend/k8s/netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-backend-access
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: groceries-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: groceries-frontend
  policyTypes:
    - Ingress
